--- a/Data Analytics/index.html
+++ b/Data Analytics/index.html
@@ -4,7 +4,7 @@ title: Data Analytics
 ---
 
 icon : 💡 📌 🔍 👩‍💻
-<!-- OpenCV 카테고리 -->
+<!-- Data Analytics 카테고리 -->
 {% assign pages_list = site.categories %}
 {% for node in pages_list %}
     {% if node[0] == "Data Analytics" %}
