--- a/ML/index.html
+++ b/ML/index.html
@@ -3,7 +3,7 @@ layout: post
 title: ML
 ---
 icon : 💡 📌 🔍 👩‍💻
-<!-- Test 카테고리 -->
+<!-- ML 카테고리 -->
 {% assign pages_list = site.categories %}
 {% for node in pages_list %}
     {% if node[0] == "ML" %}
