--- a/test.html
+++ b/test.html
@@ -10,9 +10,7 @@
     <link rel="stylesheet" href="./gitbook/gitbook-plugin-fontsettings/website.css">
     <link rel="stylesheet" href="./gitbook/gitbook-plugin-search-pro/search.css">
     <link rel="stylesheet" href="./gitbook/gitbook-plugin-back-to-top-button/plugin.css">
-
     <link rel="stylesheet" href="./gitbook/rouge/{{ site.syntax_highlighter_style }}.css">
-
     <meta name="HandheldFriendly" content="true" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -42,7 +40,7 @@
 
             display: none;
 
-            background-color: rgba(0, 0, 0, 0.4);
+            background-color: rgba(233, 227, 227, 0.4);
         }
 
         .modal.show {
@@ -54,8 +52,8 @@
             top: 50%;
             left: 50%;
 
-            width: 400px;
-            height: 600px;
+            width: 600px;
+            height: 700px;
 
             padding: 40px;
 
@@ -68,9 +66,7 @@
             transform: translateX(-50%) translateY(-50%);
         }
     </style>
-
-
-    <title>Document</title>
+    <title>modal window test page</title>
 </head>
 
 <body>
@@ -120,20 +116,11 @@
 </body>
 <script src="./gitbook/gitbook.js"></script>
 <script src="./gitbook/theme.js"></script>
-
 <script src="./gitbook/gitbook-plugin-fontsettings/fontsettings.js"></script>
 <script src="./gitbook/gitbook-plugin-sharing/buttons.js"></script>
-
-<!-- <script src="../gitbook/gitbook-plugin-lunr/lunr.min.js"></script>
-<script src="../gitbook/gitbook-plugin-lunr/search-lunr.js"></script>
-<script src="../gitbook/gitbook-plugin-search/search-engine.js"></script>
-<script src="../gitbook/gitbook-plugin-search/search.js"></script> -->
-
 <script src="./gitbook/gitbook-plugin-search-pro/jquery.mark.min.js"></script>
 <script src="./gitbook/gitbook-plugin-search-pro/search.js"></script>
-
 <script src="./gitbook/gitbook-plugin-back-to-top-button/plugin.js"></script>
-
 <script type="text/javascript" id="MathJax-script" async
     src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
 
