--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" href="./gitbook/modal_btn.css"> -->
+    <link rel="stylesheet" href="./gitbook/modal_btn.css">
 
     <link rel="stylesheet" href="./gitbook/style.css">
     <link rel="stylesheet" href="./gitbook/gitbook-plugin-fontsettings/website.css">
@@ -81,18 +81,18 @@
     <div class="modal">
         <div class="modal_body">
             <h1>감사합니다.</h1>
-            <img height="60" width="60" src="https://unpkg.com/simple-icons@v6/icons/kakao.svg" />
-            <button class="btn">
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
-                <span class="text">Test Me!</span>
-              </button>
+            <!-- <img height="60" width="60" src="https://unpkg.com/simple-icons@v6/icons/kakao.svg" /> -->
+            <a href="#" class="btn_kakao" type=button>
+                <span>KaKao</span>
+            </a>
+
+            <a href="#" class="btn_toss" type=button>
+                <span>Toss</span>
+            </a>
+
+            <!-- <button href="#" class="btn_kakao" value="KaKao"></button>
+            <button href="#" class="btn_toss" value="Toss"></button> -->
+
         </div>
     </div>
     <!-- <button class="btn-open-popup">Modal 띄우기</button> -->
