--- a/test.html
+++ b/test.html
@@ -90,6 +90,14 @@
                 <span>Toss</span>
             </a>
 
+
+            <a href="#" class="btn_kakao" type=button>
+                <span>☕한잔👉KaKao</span>
+            </a>
+            <a href="#" class="btn_toss" type=button>
+                <span>☕커피한잔👉Toss</span>
+            </a>
+            
             <!-- <button href="#" class="btn_kakao" value="KaKao"></button>
             <button href="#" class="btn_toss" value="Toss"></button> -->
 
