--- a/test.html
+++ b/test.html
@@ -72,31 +72,49 @@
 
 <body>
     <h1>안녕하세요. 현재는 코드 테스트 중 입니다. </h1>
-    <form>
+    <!-- <form>
         <a class="btn-open-popup" type="button">
             <input type="button" value="click here">
         </a>
+    </form> -->
+    <form class="btn-open-popup" >
+        <input  class="btn_coffee" type="button" value="☕한잔">
+        <!-- <a class="btn_coffee"  type="button" >
+            <input  class="btn_coffee" type="button" value="☕한잔">
+        </a> -->
     </form>
+    <!-- <a type="button">
+        <input  class="btn-open-popup" type="button" value="click here">
+    </a> -->
+
 
     <div class="modal">
         <div class="modal_body">
             <h1>감사합니다.</h1>
             <!-- <img height="60" width="60" src="https://unpkg.com/simple-icons@v6/icons/kakao.svg" /> -->
-            <a href="#" class="btn_kakao" type=button>
+            <a href="#" c type=button>
                 <span>KaKao</span>
             </a>
 
             <a href="#" class="btn_toss" type=button>
                 <span>Toss</span>
             </a>
+<!-- 
+            <li>
+                <form >
+                    <a class="btn-open-popup" type="button">
+                        <input type="button"  value="☕한잔">
+                    </a>
+                </form>
+            </li> -->
 
-
-            <a href="#" class="btn_kakao" type=button>
+            
+            <!-- <a href="#" class="btn_kakao" type=button>
                 <span>☕한잔👉KaKao</span>
             </a>
             <a href="#" class="btn_toss" type=button>
                 <span>☕커피한잔👉Toss</span>
-            </a>
+            </a> -->
             
             <!-- <button href="#" class="btn_kakao" value="KaKao"></button>
             <button href="#" class="btn_toss" value="Toss"></button> -->
