--- a/test.html
+++ b/test.html
@@ -77,17 +77,20 @@
             <input type="button" value="click here">
         </a>
     </form> -->
-    <form class="btn-open-popup" >
+    <!-- <form class="btn-open-popup" >
         <input  class="btn_coffee" type="button" value="☕한잔">
-        <!-- <a class="btn_coffee"  type="button" >
+        <a class="btn_coffee"  type="button" >
             <input  class="btn_coffee" type="button" value="☕한잔">
-        </a> -->
-    </form>
-    <!-- <a type="button">
-        <input  class="btn-open-popup" type="button" value="click here">
-    </a> -->
+        </a>
+    </form> -->
+    
+    <!-- <form>
+        <a class="btn_coffee" id="btn-id-popup" type="button" value="☕한잔">
+        </a>
+    </form> -->
+    <a class="btn-open-popup" type="button">☕ 한잔</a>
 
-
+    <!-- btn-id-popup -->
     <div class="modal">
         <div class="modal_body">
             <h1>감사합니다.</h1>
