--- a/img/test.html
+++ b/img/test.html
@@ -88,7 +88,9 @@
         <a class="btn_coffee" id="btn-id-popup" type="button" value="☕한잔">
         </a>
     </form> -->
-    <a class="btn-open-popup" type="button">☕ 한잔</a>
+    <!-- <a class="btn-open-popup" type="button">☕ 한잔</a>
+     -->
+     <a class="btn-open-popup" type="button" style="cursor:pointer">☕한잔</a>
 
     <!-- btn-id-popup -->
     <div class="modal">
